<resources>
    <string name="app_name">P3Quizz</string>
    <string name="play">Play</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="what_movie_is_this_character_from">What movie is this character from?</string>
    <string name="the_big_lebowski">The Big Lebowski</string>
    <string name="fargo">Fargo</string>
    <string name="run_lola_run">Run Lola Run</string>
    <string name="kill_bill_vol_1">Kill Bill :Vol.1</string>
    <string name="the_hobbit_there_and_back_again">The Hobbit : There and Back Again</string>
    <string name="crocodile_dundee">Crocodile Dundee</string>
    <string name="star_wars_episode_v_the_empire_strikes_back">Star Wars Episode V: The Empire Strikes Back</string>
    <string name="e_t_the_extra_terrestrial">E.T. The Extra-Terrestrial</string>
    <string name="close_encounters_of_the_third_kind">Close Encounters of the Third Kind</string>
    <string name="jude">Jude</string>
    <string name="the_mummy">The Mummy</string>
    <string name="titanic">Titanic</string>
    <string name="star_wars_episode_1_the_phantom_menace">Star Wars Episode 1: The Phantom Menace</string>
    <string name="lord_of_the_rings_the_fellowship_of_the_ring">Lord of the Rings:The Fellowship of the Ring</string>
    <string name="everything_is_illuminated">Everything is Illuminated</string>
    <string name="harry_potter_and_the_half_blood_price">Harry Potter and the Half-Blood Price</string>
    <string name="the_charge_of_the_light_brigade">The charge of the Light Brigade</string>
    <string name="pirates_of_the_carribean_the_course_of_the_black_pearl">Pirates of the Carribean:The course of the Black Pearl</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="spacew" />
    <string name="name">Name</string>
    <string name="what_are_the_names_of_the_actors">What are the names of the actors?</string>
    <string name="tom_hardy">Tom Hardy</string>
    <string name="nicholas_hult">Nicholas Hult</string>
    <string name="charlize_theron">Charlize Theron</string>
    <string name="rosie_huntington">Rosie Huntington</string>
    <string name="restart">Restart</string>
</resources>
